Project 'drm/intel' was moved to 'drm/i915/kernel'. Please update any links and bookmarks that may still have the old path.
ICL TGL : igt@gem_exec_balancer@fairslice - Fail - Failed assertion: ticks_to_ns(i915, ts[count] - ts[0]) < 2 * threshold
- Err
- Starting subtest: fairslice
- (gem_exec_balancer:7389) CRITICAL: Test assertion failure function __fairslice, file ../tests/i915/gem_exec_balancer.c:2907:
- (gem_exec_balancer:7389) CRITICAL: Failed assertion: ticks_to_ns(i915, ts[count] - ts[0]) < 2 * threshold
- (gem_exec_balancer:7389) CRITICAL: Range of timeslices greater than tolerable: 490.83ms > 268.33ms; unfair!
- Subtest fairslice failed.
- **** DEBUG ****
- (gem_exec_balancer:7389) DEBUG: Test requirement passed: intel_gen(intel_get_drm_devid(i915)) >= 11
- (gem_exec_balancer:7389) DEBUG: Launching 3 spinners on vcs
- (gem_exec_balancer:7389) igt_dummyload-DEBUG: Test requirement passed: nengine
- (gem_exec_balancer:7389) DEBUG: Cancelled spinners
- (gem_exec_balancer:7389) INFO: vcs: [1095.7, 1313.5, 1586.5] ms, expect 1333 +- 134.2ms
- (gem_exec_balancer:7389) CRITICAL: Test assertion failure function __fairslice, file ../tests/i915/gem_exec_balancer.c:2907:
- (gem_exec_balancer:7389) CRITICAL: Failed assertion: ticks_to_ns(i915, ts[count] - ts[0]) < 2 * threshold
- (gem_exec_balancer:7389) CRITICAL: Range of timeslices greater than tolerable: 490.83ms > 268.33ms; unfair!
- (gem_exec_balancer:7389) igt_core-INFO: Stack trace:
- (gem_exec_balancer:7389) igt_core-INFO: #0 ../lib/igt_core.c:1727 __igt_fail_assert()
- (gem_exec_balancer:7389) igt_core-INFO: #1 (moved) ../tests/i915/gem_exec_balancer.c:2903 __fairslice.constprop.3()
- (gem_exec_balancer:7389) igt_core-INFO: #2 ../tests/i915/gem_exec_balancer.c:2926 __real_main2968()
- (gem_exec_balancer:7389) igt_core-INFO: #3 (moved) ../tests/i915/gem_exec_balancer.c:2968 main()
- (gem_exec_balancer:7389) igt_core-INFO: #4 (moved) ../csu/libc-start.c:344 __libc_start_main()
- (gem_exec_balancer:7389) igt_core-INFO: #5 (closed) [_start+0x2a]
- **** END ****
- Subtest fairslice: FAIL (2.116s)